fixed bugs except for images

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -46,7 +46,9 @@
             <img class="image left shadowed" src="images/homepage/1-client-img.png" alt="">
             <div>
                 <p>As the foremost dark-pool trading platform, Liquidnet has led the way for privatized and anonymized trading. Institutional investors like banks and insurance companies rely on Liquidnet for liquidity. Beyond simple trade execution, Liquidnet's technology focuses on providing alpha and trading opportunities. In turn, this connects and empowers traders to achieve their best trades possible.</p>
-                <img data-aos="fade-up" href="https://www.liquidnet.com/" src="images/homepage/1-client-button.png" alt="" class="img-button shadowed">
+                <a target="_blank" href="https://www.liquidnet.com/">
+                    <img data-aos="fade-up" src="images/homepage/client-btn.svg" alt="" class="img-button shadowed">
+                </a>
             </div>
         </div>
     </div>
@@ -81,7 +83,7 @@
 </div>
 
 <!-- Our Process -->
-<div class="section">
+<div class="section over">
     <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
         <div class="section-title">Our Process</div>
@@ -115,7 +117,7 @@
         <div class="homepage-subtitle">GET TO KNOW</div>
         <div class="section-title">Our Team</div>
         <div class="flex-h space-above">We are five Carnegie Mellon University students studying in the Master of Human-Computer Interaction program in School of Computer Science. To find out more about us and our roles within the project, please visit the About page.</div>
-        <a href="about.html"><img data-aos="fade-up" href="about.html" src="images/homepage/4-team-button.png" alt="" class="b1 img-button shadowed space-above"></a>
+        <a data-aos="fade-up" href="about.html"><img src="images/homepage/team-btn.svg" alt="" class="b1 img-button shadowed space-above"></a>
     </div>
 </div>
 
