Glossary contents updated

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -481,7 +481,7 @@
 
                 <div class="tab-page blue">
                     <div class="slideshow-img-wrapper">
-                      <img class="tab-cover-image" src="images/design/clustering-slide.jpg">
+                      <img class="tab-cover-image" src="images/design/clustering-2.png">
                       <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
