--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
@@ -57,8 +57,8 @@
     <img src="images/glossary/right.svg" class="bg right">
     <img src="images/glossary/left.svg" class="bg left">
     <div class="container">
-        <div class="page-title purple-text">Ideation</div>
-        <div class="banner-paragraph">Using research as the backbone of our work, our team began imagining concepts, experiences, and software prototypes. At its core, our work centered around creating trading experiences that are positive enough to keep traders coming back to Liquidnet. We do this by redesigning interactions that show traders the 'hidden value' Liquidnet has, and how to use that to their advantage.</div>
+        <div class="page-title purple-text">Glossary</div>
+        <div class="banner-paragraph">This glossary covers domains that the average reader may not be well informed about. Financial topics are separated from those that are trading specific, and design related concepts from HCI methods will also be referenced below.</div>
     </div>
 </div>
 
@@ -66,26 +66,100 @@
     <div class="container">
         <div class="section-title">Financial Terminology</div>
         <div class="section-title-line purple-bg"></div>
-        <div class="smaller-section flex-h">
-            <h3>Concept Testing</h3>
-        </div>
-        <div class="smaller-section flex-h">
-            <p>This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</p>
-        </div>
+        <h3>Alpha</h3>
+        <p>An investing term that describes a strategies ability to beat the market.<br/>
+        <a href="https://www.investopedia.com/terms/a/alpha.asp">Source: Investopedia</p></a>
+
+        <h3>Dark Pool</h3>
+        <p>A private financial forum for trading securities; this allows investors the ability to trade without exposure until after the trade has been executed.<br/>
+        <a href="https://www.investopedia.com/terms/d/dark-pool.asp">Source: Investopedia</p></a>
+
+        <h3>Institutional Investing</h3>
+        <p>A nonbank person or organization that trades large enough share quantities or dollar amounts such that it qualifies for preferential treatment and lower commissions.<br/>
+        <a href="https://www.investopedia.com/terms/i/institutionalinvestor.asp">Source: Investopedia</p></a>
+
+        <h3>Liquidity</h3>
+        <p>The degree to which an asset or security can quickly be converted to cash.<br/>
+        <a href="https://www.investopedia.com/terms/l/liquidity.asp">Source: Investopedia</p></a>
+
+        <h3>Name</h3>
+        <p>The official name under which an individual or company chooses to do business.<br/>
+        <a href="https://www.investopedia.com/articles/personal-finance/120415/trade-name-vs-trademark-know-difference.asp">Source: Investopedia</p></a>
+
+        <h3>Symbol</h3>
+        <p>A unique series of letters assigned to a security for trading purposes.<br/>
+        <a href="https://www.investopedia.com/terms/s/stocksymbol.asp">Source: Investopedia</p></a>
     </div>
 </div>
 <div id="sec-overview" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">Trader Terminology</div>
         <div class="section-title-line purple-bg"></div>
-        <div class="smaller-section flex-h">This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</div>
+        <h3>Action Stream</h3>
+        <p>A project-local term referring to the stream of actions required to complete a task or workflow.</p>
+
+        <h3>Active Trade</h3>
+        <p>Buying and selling securities for quick profit based on short-term movements in price.<br/>
+        <a href="https://www.investopedia.com/terms/a/active-trading.asp">Source: Investopedia</p></a>
+
+        <h3>Algorithms</h3>
+        <p>A set of instructions for solving a problem or accomplishing a task, in particular here, for executing trades under specific conditions or parameters.<br/>
+        <a href="https://www.investopedia.com/terms/a/algorithm.asp">Source: Investopedia</p></a>
+
+        <h3>Blotter</h3>
+        <p>A record of trades and the details of the trades made over a period of time; usually made by a trade software.<br/>
+        <a href="https://www.investopedia.com/terms/b/blotter.asp">Source: Investopedia</p></a>
+
+        <h3>Commission</h3>
+        <p>A service charge assessed by a broker or investment advisor for providing investment advice or handling purchases and sales of securities for a client.<br/>
+        <a href="https://www.investopedia.com/terms/c/commission.asp">Source: Investopedia</p></a>
+
+        <h3>Information Leakage</h3>
+        <p>in dark pool trading, the (usually unintentional) sharing of information that should be kept anonymous or hidden in order prevent competitors from taking advantage of ones trading strategy.</p>
+
+        <h3>Matches</h3>
+        <p>Opposite requests for a security or derivative at the same price.<br/>
+        <a href="https://www.investopedia.com/terms/m/matchingorders.asp">Source: Investopedia</p></a>
+
+        <h3>Open, mid, close</h3>
+        <p>Colloquial terms for the state of the market, e.g. market open, mid-day market, and market close.<br/>
+        <a href="https://www.investopedia.com/terms/s/stocksymbol.asp">Source: Investopedia</p></a>
+
+        <h3>Passive Trade</h3>
+        <p>Investing strategy that aims to maximize returns by minimizing buying and selling.<br/>
+        <a href="https://www.investopedia.com/terms/p/passiveinvesting.asp">Source: Investopedia</p></a>
+
+        <h3>Portfolio</h3>
+        <p>A grouping of financial assets.<br/>
+        <a href="https://www.investopedia.com/terms/p/portfolio.asp">Source: Investopedia</p></a>
     </div>
 </div>
 <div id="sec-overview" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">User Experience Terminology</div>
         <div class="section-title-line purple-bg"></div>
-        <div class="smaller-section flex-h">This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</div>
+        <h3>Cognitive Overload</h3>
+        <p>When the amount of information coming in exceeds our ability to handle it, resulting in performance suffering.<br/>
+        <a href="https://www.nngroup.com/articles/minimize-cognitive-load/">Source: Nielsen Norman Group</p></a>
+
+        <h3>Generative Research</h3>
+        <p>Research that helps define the problem you’d like to design a solution for, data gathering related research.<br/>
+        <a href="https://www.usertesting.com/blog/generative-vs-evaluative-research/">Source: UserTesting</p></a>
+
+        <h3>Human-Computer Interaction</h3>
+        <p>Multidisciplinary field of study focusing on the design of computer technology and, in particular, the interaction between humans (the users) and computers.<br/>
+        <a href="https://www.interaction-design.org/literature/topics/human-computer-interaction">Source: Interaction Design Foundation</p></a>
+
+        <h3>Proxy</h3>
+        <p>A substitute, in our case, usually for dark pool institutional traders.</p>
+
+        <h3>Stakeholder</h3>
+        <p>A person or organization that has an interest or concern in an organization.<br/>
+        <a href="http://www.businessdictionary.com/definition/stakeholder.html">Source: Business Dictionary</p></a>
+
+        <h3>Swimlane</h3>
+        <p>A single row within a diagram, typical in process flow diagrams and flow-chartsS.<br/>
+        <a href="https://www.lucidchart.com/pages/swimlane-diagram">Source: Lucid Chart</p></a>
     </div>
 </div>
 
