--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -241,7 +241,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/research/poker.png">
+                        <img class="tab-cover-image" src="images/research/poker.jpg">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
@@ -385,7 +385,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/research/affinity-diagram-2.png">
+                        <img class="tab-cover-image" src="images/research/affinity-diagram-3.png">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
@@ -462,7 +462,7 @@
                 </div>
                 <div class="tab-page active">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/research/competitor.png">
+                        <img class="tab-cover-image" src="images/research/competitor-2.png">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
@@ -486,7 +486,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/Passive-Match-Flow-p-1080.jpeg">
+                        <img class="tab-cover-image" src="images/research/Passive-Match-Flow.jpg">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
@@ -547,7 +547,7 @@
                 </div>
                 <div class="tab-page active">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/research/product-usability-2.jpg">
+                        <img class="tab-cover-image" src="images/research/product-usability-3.jpg">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
@@ -595,7 +595,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper">
-                        <img class="tab-cover-image" src="images/research/trading_floor-2.jpg">
+                        <img class="tab-cover-image" src="images/research/trading_floor-3.jpg">
                         <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
