fix image sizing

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
@@ -30,25 +30,17 @@
 
 <div class="inpage-nav desktop">
     <div class="line"></div>
-    <a href="#sec-overview" class="active">
+    <a href="#financial-terminology" class="active">
         <div class="dot"></div>
         <div class="nav-section">Finance</div>
     </a>
-    <a href="#sec-ideating">
+    <a href="#trader-terminology">
         <div class="dot"></div>
         <div class="nav-section">Trading</div>
     </a>
-    <a href="#sec-concept-testing">
+    <a href="#user-experience-terminology">
         <div class="dot"></div>
         <div class="nav-section">User Experience</div>
-    </a>
-    <a href="#sec-prototyping">
-        <div class="dot"></div>
-        <div class="nav-section">Prototyping</div>
-    </a>
-    <a href="#sec-takeaways">
-        <div class="dot"></div>
-        <div class="nav-section">Takeaways</div>
     </a>
 </div>
 
@@ -62,7 +54,7 @@
     </div>
 </div>
 
-<div id="sec-overview" class="section bg-light-purple">
+<div id="financial-terminology" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">Financial Terminology</div>
         <div class="section-title-line purple-bg"></div>
@@ -91,7 +83,7 @@
         <a href="https://www.investopedia.com/terms/s/stocksymbol.asp">Source: Investopedia</p></a>
     </div>
 </div>
-<div id="sec-overview" class="section bg-light-purple">
+<div id="trader-terminology" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">Trader Terminology</div>
         <div class="section-title-line purple-bg"></div>
@@ -134,17 +126,17 @@
         <a href="https://www.investopedia.com/terms/p/portfolio.asp">Source: Investopedia</p></a>
     </div>
 </div>
-<div id="sec-overview" class="section bg-light-purple">
+<div id="user-experience-terminology" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">User Experience Terminology</div>
         <div class="section-title-line purple-bg"></div>
         <h3>Cognitive Overload</h3>
-        <p>When the amount of information coming in exceeds our ability to handle it, resulting in performance suffering.<br/>
-        <a href="https://www.nngroup.com/articles/minimize-cognitive-load/">Source: Nielsen Norman Group</p></a>
+        <p>When the amount of information coming in exceeds our ability to handle it, resulting in performance suffering.<br/></p>
+        <a href="https://www.nngroup.com/articles/minimize-cognitive-load/">Source: Nielsen Norman Group</a>
 
         <h3>Generative Research</h3>
-        <p>Research that helps define the problem you’d like to design a solution for, data gathering related research.<br/>
-        <a href="https://www.usertesting.com/blog/generative-vs-evaluative-research/">Source: UserTesting</p></a>
+        <p>Research that helps define the problem you’d like to design a solution for, data gathering related research.<br/></p>
+        <a href="https://www.usertesting.com/blog/generative-vs-evaluative-research/">Source: UserTesting</a>
 
         <h3>Human-Computer Interaction</h3>
         <p>Multidisciplinary field of study focusing on the design of computer technology and, in particular, the interaction between humans (the users) and computers.<br/>
