--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -126,9 +126,8 @@
                     <div>
                         <h2>Flexible Layouts</h2>
                         <b2>Traders want a customizable application that reflects their specific trading styles or needs. We proposed using tabs in Liquidnet that allow users to drag and drop menus into place as one solution.</b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-normal">
                             <img class="slideshow-img" src="images/ideation/webflow-layout.png">
-                            <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots active" onclick=""></span>
@@ -146,9 +145,8 @@
                     <div>
                         <h2>User Profiles</h2>
                         <b2>Liquidnet wants advice on measuring user-behavior data. We recommended user profiles. Users can get customized responses to app usage, and Liquidnet can collect a profile's behavioral data. </b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-normal">
                           <img class="slideshow-img" src="images/ideation/user-profile.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -165,9 +163,8 @@
                     <div>
                         <h2>Improved Blotter and Analytics</h2>
                         <b2>Small changes to Liquidnet's existing design can increase legibility of the application. We recommend changing sizing, using color and using icons to create visual hierarchy.</b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-normal">
                           <img class="slideshow-img" src="images/ideation/improved-analytics.jpg">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -184,9 +181,8 @@
                     <div>
                         <h2>Team Metrics for Success</h2>
                         <b2>We recommend incorporating team metrics into Liquidnet. Traders and portfolio managers can figure out the team’s progress at a glance in-app. This is faster and more accurate than a self-generated report.</b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-normal">
                           <img class="slideshow-img" src="images/trader-success.jpg">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -203,9 +199,8 @@
                     <div>
                         <h2>Customized Alert System</h2>
                         <b2>We recommend redesigning alerts, as they inform traders as trades come in over the day or as orders become executable. We wanted traders to be able to make their own types of alerts and categorize alerts as well.</b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-normal">
                           <img class="slideshow-img" src="images/ideation/custom-alerts.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -230,9 +225,8 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Storyboarding</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <div class="slideshow-img-wrapper">
+                    <div class="slideshow-img-wrapper h-normal">
                       <img class="tab-cover-image" src="images/design/crazy-eights-2.jpg">
-                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -252,9 +246,8 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <div class="slideshow-img-wrapper">
+                    <div class="slideshow-img-wrapper h-normal contain">
                       <img class="tab-cover-image" src="images/storyboard.jpg">
-                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -288,9 +281,8 @@
                     <div>
                         <h2>Scenario: Reorienting traders after hiatus</h2>
                         <b2>Traders need to refresh their knowledge of the market every morning before work. We propose Liquidnet streamline their data for traders to read before work.</b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-normal contain">
                             <img class="slideshow-img" src="images/design/storyboard-reorient.jpg">
-                            <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots active" onclick=""></span>
@@ -306,7 +298,9 @@
                     <div>
                         <h2>Scenario: Visualizing data better</h2>
                         <b2>Data analytics need to be interpreted properly before a trader can make a trading decision. We recommend grouping similar trading trends into default analytics packages.</b2>
-                        <img class="slideshow-img" src="images/design/storyboard-analytics.jpg">
+                        <div class="slideshow-img-wrapper h-normal contain">
+                            <img class="slideshow-img" src="images/design/storyboard-analytics.jpg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots active" onclick=""></span>
@@ -320,7 +314,9 @@
                     <div>
                         <h2>Scenario: Trader participation in product eval</h2>
                         <b2>Traders are reluctant to try new features in Liquidnet. By providing small incentives and opportunities for feedback, Liquidnet can learn more about their user and onboard them to new features.</b2>
-                        <img class="slideshow-img" src="images/design/storyboard-participate.jpg">
+                        <div class="slideshow-img-wrapper h-normal contain">
+                            <img class="slideshow-img" src="images/design/storyboard-participate.jpg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots" onclick=""></span>
@@ -381,7 +377,6 @@
                 <div class="tab-page active">
                     <div class="slideshow-img-wrapper">
                       <img class="tab-cover-image" src="images/ideation/client-call.jpg">
-                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -416,7 +411,7 @@
                 </div>
                 <div class="tab-page active">
                     <div class="slideshow-img-wrapper">
-                      <img class="tab-cover-image" src="images/ideation/speed-dating.png"><img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                      <img class="tab-cover-image" src="images/ideation/speed-dating.png">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -439,7 +434,7 @@
                 </div>
                 <div class="tab-page">
                     <div class="slideshow-img-wrapper">
-                      <img class="tab-cover-image" src="images/ideation/client-feedback-2.png"><img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                      <img class="tab-cover-image" src="images/ideation/client-feedback-2.png">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -477,9 +472,8 @@
                     <div>
                         <h2>Alerts</h2>
                         <b2>This concept redesigns the customizable alert ecosystem in Liquidnet. It focuses on making suggested actions clear for each alert and also introduces alert grouping. </b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                             <img class="slideshow-img" src="images/Alert.png">
-                            <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots active" onclick=""></span>
@@ -496,9 +490,8 @@
                     <div>
                         <h2>Analytics and Blotter</h2>
                         <b2>We made analytics and the blotter more readable by using visual icons and cues on the graph. We also add more opportunities to interact by adding hover-over text. </b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                           <img class="slideshow-img" src="images/analytics.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -514,9 +507,8 @@
                     <div>
                         <h2>Team Metrics</h2>
                         <b2>On the left, we see all team actions with key information (names, volume, price) listed. On the right, we see a potential way to represent individual and team performance. </b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                           <img class="slideshow-img" src="images/Teamwork.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -532,9 +524,8 @@
                     <div>
                         <h2>Flexible Layout</h2>
                         <b2>To give traders a customizable experience, we designed for a flexible layout with movable tabs. Different traders may rearrange their front-end to suit their trading style.</b2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                           <img class="slideshow-img" src="images/mid-fi1.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
@@ -557,9 +548,8 @@
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 2)">
                     <div>
                         <h2>Low Fidelity (1st round)</h2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                             <img class="slideshow-img" src="images/ideation/lowfi.png">
-                            <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="tab-content">
                         <div>
@@ -592,9 +582,8 @@
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 0)">
                     <div>
                         <h2>Low Fidelity (2nd round)</h2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                           <img class="slideshow-img" src="images/ideation/midfi-1.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="tab-content">
                         <div>
@@ -626,9 +615,8 @@
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 1)">
                     <div>
                         <h2>Mid Fidelity</h2>
-                        <div class="slideshow-img-wrapper">
+                        <div class="slideshow-img-wrapper h-wide contain">
                           <img class="slideshow-img" src="images/ideation/midfi-2.png">
-                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="tab-content">
                         <div>
@@ -669,9 +657,8 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Team Focus</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <div class="slideshow-img-wrapper">
+                    <div class="slideshow-img-wrapper h-wide">
                       <img class="tab-cover-image" src="images/ideation/preso-client.jpg">
-                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
                         <div>
@@ -693,9 +680,8 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <div class="slideshow-img-wrapper">
+                    <div class="slideshow-img-wrapper h-wide">
                       <img class="tab-cover-image" src="images/ideation/preso-notes.jpg">
-                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                     </div>
                     <div class="tab-content">
                         <div>
