Updates to design page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -478,7 +478,7 @@
                         <h2>Alerts</h2>
                         <b2>This concept redesigns the customizable alert ecosystem in Liquidnet. It focuses on making suggested actions clear for each alert and also introduces alert grouping. </b2>
                         <div class="slideshow-img-wrapper">
-                            <img class="slideshow-img" src="images/Alert.png">
+                            <img class="slideshow-img" src="images/alert-3x.jpg">
                             <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
